fix: footer in dark mode

--- a/styles/themes/_dark.scss
+++ b/styles/themes/_dark.scss
@@ -231,13 +231,6 @@ html.dark-mode {
         }
       }
     }
-
-    .left-blurred-image {
-      right: -62rem;
-      top: -68rem;
-      left: unset;
-
-    }
   }
 
 
